# flashwatch

./: .env.example  .gitignore  Cargo.toml  HACKATHON.md  README.md  VISION.md  post-template.md  rules.example.toml  start.sh
deploy/: nginx.conf
moltbook-relay/: index.js  package.json
openclaw/: ASK_SKILL.md  SKILL.md  hook-transform.js
src/: alert.rs  analyze.rs  ask.rs  decode.rs  format.rs  main.rs  monitor.rs  rpc.rs  rules.rs  serve.rs  store.rs  stream.rs  types.rs
static/: ask.sh  index.html  skill.md
